[package]
name = "torrenter"
version = "0.1.0"
authors = ["Madhava Di Florio <mattdiflorio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_bencode = "^0.2.2"
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_bytes = "0.11.5"
anyhow = "1.0"
url = "1.5.1"
bytebuffer = "0.2.1"
rand = "0.7.3"
rust-crypto = "0.2.36"